
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "hyper_fs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ignore         = "0.4.25"
jwalk          = "0.8.1"
napi           = "3.0.0"
napi-derive    = "3.4"
rayon          = "1.11.0"
remove_dir_all = "1.0.0"
serde          = "1.0.228"
walkdir        = "2.5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
